# docs/openapi.json
@@ -965,6 +965,43 @@
         "summary": "Export Report Bundle"
       }
     },
+    "/reports/{report_id}/export-pdf": {
+      "get": {
+        "operationId": "export_report_pdf_reports__report_id__export_pdf_get",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "report_id",
+            "required": true,
+            "schema": {
+              "title": "Report Id",
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            },
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "summary": "Export Report Pdf"
+      }
+    },
     "/reports/{report_id}/replay": {
       "get": {
         "operationId": "get_report_replay_reports__report_id__replay_get",
